Fix the margin top and button for nav-collapsable mod3

--- a/site/mod3_solution/css/styles.css
+++ b/site/mod3_solution/css/styles.css
@@ -19,4 +19,6 @@
 #nav-list {
 	background-color: #ff8080;
 	font-size: 1.5em;
+	margin-top: 0;
+	margin-bottom: 0;
 }  
